# alabos

./: .gitignore
alabos2/: ARCHITECTURE_ANSWERS.md  README.md  SCALABILITY.md  UI_DESIGN.md  pyproject.toml
alabos2/examples/devices/: furnace.py
alabos2/examples/tasks/: heating.py
alabos2/galactus_api/: __init__.py  main.py
alabos2/galactus_api/routes/: __init__.py  devices.py  jobs.py  samples.py  task_templates.py  tasks.py  workflows.py
alabos2/galactus_core/: cli.py
alabos2/galactus_core/database/: alembic.ini  config.py  connection.py
alabos2/galactus_core/database/alembic/: env.py
alabos2/galactus_core/database/alembic/versions/: initial_migration.py
alabos2/galactus_core/events/: consumer.py  producer.py
alabos2/galactus_core/models/: base.py  device.py  job.py  task.py  workflow.py
alabos2/galactus_core/resource/: __init__.py  resource_manager.py
alabos2/galactus_core/scheduler/: __init__.py  scheduler.py  task_executor.py
alabos2/galactus_core/utils/: file_handler.py
alabos2/galactus_ui/: index.html  package.json  tailwind.config.js
alabos2/galactus_ui/src/: App.tsx  index.css  main.tsx
alabos2/galactus_ui/src/components/layout/: Layout.tsx
alabos2/galactus_ui/src/components/ui/: Button.tsx  Card.tsx
alabos2/galactus_ui/src/pages/: DevicesPage.tsx  HomePage.tsx  JobsPage.tsx  TaskTemplateBuilderPage.tsx  TaskTemplatesPage.tsx  WorkflowDesignerPage.tsx  WorkflowsPage.tsx
alabos2/galactus_ui/src/services/: api.ts
alabos2/galactus_ui/src/types/: api.ts
galactus/: ARCHITECTURE_ANSWERS.md  README.md  SCALABILITY.md  UI_DESIGN.md  pyproject.toml
galactus/examples/devices/: furnace.py
galactus/examples/tasks/: heating.py
galactus/galactus_core/: cli.py
galactus/galactus_core/database/: alembic.ini  config.py  connection.py
galactus/galactus_core/database/alembic/: env.py
galactus/galactus_core/database/alembic/versions/: initial_migration.py
galactus/galactus_core/events/: consumer.py  producer.py
galactus/galactus_core/models/: base.py  device.py  job.py  task.py  workflow.py
galactus/galactus_core/utils/: file_handler.py
